--- a/valentine-2022/5-heart-customiser/index.css
+++ b/valentine-2022/5-heart-customiser/index.css
@@ -62,7 +62,7 @@ button:focus {
 .heart:after {
   content: "";
   position: absolute;
-  background-color: var(--white);
+  background-color: inherit;
   border-radius: 50%;
   height: 100px;
   width: 100px;
