--- a/valentine-2022/5-heart-customiser/index.css
+++ b/valentine-2022/5-heart-customiser/index.css
@@ -32,6 +32,7 @@ body {
 
 button {
   font-family: inherit;
+  font-weight: 700;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   border-radius: 5px;
@@ -39,11 +40,11 @@ button {
   padding: 1em 2em;
   color: var(--raisin);
   background: var(--white);
+  transition: transform 300ms ease-in;
 }
 
-button:hover,
-button:focus {
-  transform: scale(1.02);
+button:hover {
+  transform: scale(1.05);
   cursor: pointer;
 }
 
