--- a/space-2022/2-galaxy-array/index.css
+++ b/space-2022/2-galaxy-array/index.css
@@ -8,17 +8,24 @@
   --grey: #d4d4d4;
 }
 
+* {
+  margin: 0;
+}
+
 body {
   background-color: var(--raisin);
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-size: 2em;
 }
 
 #galaxy {
   display: flex;
   flex-wrap: wrap;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#galaxy p {
+  width: 5%;
+  height: 5%;
+  text-align: center;
 }
